[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Dino.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Asset 1.png" type="Texture" id=2]
[ext_resource path="res://scenes/DinoChrome.gd" type="Script" id=3]
[ext_resource path="res://scenes/obstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/bird.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/start.gd" type="Script" id=6]
[ext_resource path="res://assets/Kenney Future Narrow.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/end.gd" type="Script" id=8]
[ext_resource path="res://audio/Intro Theme.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 90 )

[node name="DinoChrome" type="Node2D"]
script = ExtResource( 3 )
scene_obstacle = [ ExtResource( 4 ), ExtResource( 5 ) ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 323, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 162 )
texture = ExtResource( 2 )
centered = false

[node name="obs_container" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true

[node name="start" type="Label" parent="Camera2D"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -9.0
margin_right = 25.5
margin_bottom = 9.0
rect_pivot_offset = Vector2( 134, 45 )
custom_colors/font_color = Color( 0.0392157, 0.145098, 0.372549, 1 )
custom_fonts/font = SubResource( 3 )
text = "START"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="end" type="Label" parent="Camera2D"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -9.0
margin_right = 47.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( 134, 45 )
custom_colors/font_color = Color( 0.0392157, 0.145098, 0.372549, 1 )
custom_fonts/font = SubResource( 3 )
text = "game over"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="Dino" parent="Camera2D" instance=ExtResource( 1 )]
position = Vector2( -128, 22 )

[node name="ground" type="StaticBody2D" parent="Camera2D"]
position = Vector2( 0, 81 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ground"]
shape = SubResource( 1 )

[node name="obs_eraser" type="Area2D" parent="Camera2D"]
position = Vector2( -180, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/obs_eraser"]
shape = SubResource( 2 )

[node name="score" type="Label" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -63.0
margin_right = -106.0
margin_bottom = -45.0
rect_pivot_offset = Vector2( 134, 45 )
custom_colors/font_color = Color( 0.0392157, 0.145098, 0.372549, 1 )
custom_fonts/font = SubResource( 3 )
text = "0000"

[node name="hi_score" type="Label" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -79.0
margin_right = 4.0
margin_bottom = -61.0
rect_pivot_offset = Vector2( 134, 45 )
custom_colors/font_color = Color( 0.0392157, 0.145098, 0.372549, 1 )
custom_fonts/font = SubResource( 3 )
text = "High score : 0000"

[node name="obs_pos" type="Position2D" parent="."]
position = Vector2( 400, 162 )

[node name="obs_y_pos_1" type="Position2D" parent="."]
position = Vector2( 400, 142 )

[node name="obs_y_pos_2" type="Position2D" parent="."]
position = Vector2( 400, 122 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
stream_paused = true

[connection signal="area_entered" from="Camera2D/obs_eraser" to="." method="_on_obs_eraser_area_entered"]
